--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <label for="catalog" class="catalog-close">
                     <img src="img/burger-menu-close.svg" alt="logo">
                 </label>
-                <div class="catalog-logo-logo">
+                <div>
                     <img class="logo-mob-img" src="img/logo-mob.svg" alt="logo" width="89" height="26">
                     <span class="logo-text">
                         Платформа для заказчиков
@@ -206,8 +206,8 @@
                 </div>
             </form>
             <span class="text">
-                Ваш менеджер <br>
-                <b>Константинопольский Константин</b>
+                Ваш менеджер
+                <b>Константинопольский&nbsp;Константин</b>
             </span>
             <div class="social">
                 <button class="bin">
