--- a/index.html
+++ b/index.html
@@ -193,45 +193,63 @@
     <!-- left-menu end -->
     <div class="container">
         <!-- header start -->
-    <header class="header">
-        <form action="#" method="POST" class="form">
-            <div class="search">
-                <select name="select" id="select" class="select">
-                    <option value="0" selected>Выберите категорию</option>
-                    <option value="1">Игровой ноутбук</option>
-                    <option value="2">Ультрабук</option>
-                </select>
-                <div class="input">
-                    <input type="search" name="search" id="search" placeholder="Ноутбук Lenovo"><label for="search"><img
-                        src="img/loop.svg" alt="loop"></label>
+        <header class="header">
+            <form action="#" method="POST" class="form">
+                <div class="search">
+                    <select name="select" id="select" class="select">
+                        <option value="0" selected>Выберите категорию</option>
+                        <option value="1">Игровой ноутбук</option>
+                        <option value="2">Ультрабук</option>
+                    </select>
+                    <div class="input">
+                        <input type="search" name="search" id="search" placeholder="Ноутбук Lenovo"><label
+                            for="search"><img src="img/loop.svg" alt="loop"></label>
+                    </div>
                 </div>
+            </form>
+            <span class="text">
+                Ваш менеджер
+                <b>Константинопольский&nbsp;Константин</b>
+            </span>
+            <div class="social">
+                <button class="bin">
+                    <img class="bin-img" src="img/bin.svg" alt="bin" width="19" height="17">
+                    <output>1</output>
+                </button>
+                <button class="bell">
+                    <img class="bell-img" src="img/bell.svg" alt="bin" width="19" height="17">
+                    <output>5</output>
+                </button>
+                <a href="#" class="profile">
+                    <img class="profile-img" src="img/profile.svg" alt="bin" width="19" height="17">
+                </a>
             </div>
-        </form>
-        <span class="text">
-            Ваш менеджер
-            <b>Константинопольский&nbsp;Константин</b>
-        </span>
-        <div class="social">
-            <button class="bin">
-                <img class="bin-img" src="img/bin.svg" alt="bin" width="19" height="17">
-                <output>1</output>
-            </button>
-            <button class="bell">
-                <img class="bell-img" src="img/bell.svg" alt="bin" width="19" height="17">
-                <output>5</output>
-            </button>
-            <a href="#" class="profile">
-                <img class="profile-img" src="img/profile.svg" alt="bin" width="19" height="17">
-            </a>
-        </div>
-    </header>
-    <!-- header end -->
-    <!-- main start -->
-    <main class="main">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur blanditiis, corporis minima dolorum delectus mollitia. At fugit totam doloribus minus officiis quia quidem accusamus deleniti dolores praesentium modi, ipsum sit.
-    </main>
-    <!-- main end -->
-</div>
+        </header>
+        <!-- header end -->
+        <!-- main start -->
+        <main class="main">
+            <nav class="bread-crumbs">
+                <ul class="list">
+                    <li class="item">
+                        <a href="#" class="link">
+                            Главная
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="link">
+                            Заказы
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="link active">
+                            История заказов
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </main>
+        <!-- main end -->
+    </div>
 </body>
 
 </html>
