--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     </li>
                     <li class="item">
                         <a href="#" class="link active">
-                            История заказов
+                            История&nbsp;заказов
                         </a>
                     </li>
                 </ul>
