--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <!-- header start -->
         <header class="header">
             <form action="#" method="POST" class="form">
-                <div>
+                <div class="search">
                     <select name="select" id="select" class="select">
                         <option value="0" selected>Выберите категорию</option>
                         <option value="1">Игровой ноутбук</option>
